# rnnoise-nodejs

./: .gitignore  .gitmodules  .npmignore  .travis.yml  LICENSE  README.md  package-lock.json  package.json
examples/: basic.js
lib/: index.js
native/: .npmignore  Cargo.toml
native/src/: denoise.rs  lib.rs  rnnoise.rs
native/sys/: Cargo.toml  build.rs
