[package]
name = "rnnoise-nodejs"
version = "0.0.1"
authors = ["cedrickchee <cedric@invictusbyte.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rnnoise_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
